--- a/app/src/main/res/layout/fragment_add_password.xml
+++ b/app/src/main/res/layout/fragment_add_password.xml
@@ -24,18 +24,18 @@
             android:layout_marginEnd="30dp">
 
             <TextView
-                android:id="@+id/tv_alias"
+                android:id="@+id/tv_account_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/alias"
+                android:text="@string/account_name"
                 android:textSize="24sp" />
 
             <EditText
-                android:id="@+id/edt_alias"
+                android:id="@+id/edt_account_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/alias"
-                android:inputType="text|number" />
+                android:hint="@string/account_name"
+                android:inputType="text" />
         </LinearLayout>
 
         <LinearLayout
@@ -70,6 +70,7 @@
                     android:inputType="textVisiblePassword" />
 
                 <LinearLayout
+                    android:id="@+id/ll_preferences"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
@@ -96,7 +97,7 @@
                         android:text="@string/special_characters"/>
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:weightSum="2"
                         android:orientation="horizontal">
@@ -117,8 +118,8 @@
                             android:hint="@string/password_length"/>
                     </LinearLayout>
 
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btn_gen_password"
+                    <Button
+                        android:id="@+id/btn_set_password"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/set_password"/>
