--- a/app/src/main/res/layout/fragment_passwords.xml
+++ b/app/src/main/res/layout/fragment_passwords.xml
@@ -15,7 +15,7 @@
             android:id="@+id/rv_password_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:visibility="gone"
+            tools:visibility="visible"
             tools:itemCount="10"
             tools:listitem="@layout/password_item"/>
 
@@ -27,7 +27,7 @@
             android:orientation="vertical"
             android:gravity="center"
             android:visibility="gone"
-            tools:visibility="visible">
+            tools:visibility="gone">
 
             <TextView
                 android:id="@+id/tv_empty_list"
