--- a/app/src/main/res/layout/fragment_add_password.xml
+++ b/app/src/main/res/layout/fragment_add_password.xml
@@ -8,141 +8,146 @@
             type="com.benatt.passwords.views.addpassword.AddPasswordViewModel" />
     </data>
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/ll_alias"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:orientation="vertical"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp">
-
-            <TextView
-                android:id="@+id/tv_account_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/account_name"
-                android:textSize="24sp" />
-
-            <EditText
-                android:id="@+id/edt_account_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/account_name"
-                android:inputType="text" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_below="@+id/ll_alias"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp">
-
-            <TextView
-                android:id="@+id/tv_password"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/password"
-                android:textSize="24sp" />
+            android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/ll_alias"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="vertical"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp">
+
+                <TextView
+                    android:id="@+id/tv_account_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/account_name"
+                    android:textSize="24sp" />
+
+                <EditText
+                    android:id="@+id/edt_account_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/account_name"
+                    android:inputType="text" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:weightSum="5">
+                android:layout_below="@+id/ll_alias"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp">
 
-                <EditText
-                    android:id="@+id/edt_password"
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/tv_password"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_weight="3.5"
-                    android:hint="@string/password"
-                    android:inputType="textVisiblePassword" />
+                    android:text="@string/password"
+                    android:textSize="24sp" />
 
                 <LinearLayout
-                    android:id="@+id/ll_preferences"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
                     android:orientation="vertical"
-                    android:visibility="gone">
+                    android:weightSum="5">
 
-                    <com.google.android.material.checkbox.MaterialCheckBox
-                        android:id="@+id/cb_alphabets"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checked="true"
-                        android:text="@string/alphabets"/>
-
-                    <com.google.android.material.checkbox.MaterialCheckBox
-                        android:id="@+id/cb_digits"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/digitz"/>
-
-                    <com.google.android.material.checkbox.MaterialCheckBox
-                        android:id="@+id/cb_special"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/special_characters"/>
-
-                    <LinearLayout
+                    <EditText
+                        android:id="@+id/edt_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:weightSum="2"
-                        android:orientation="horizontal">
+                        android:layout_marginStart="5dp"
+                        android:layout_weight="3.5"
+                        android:hint="@string/password"
+                        android:inputType="textVisiblePassword" />
 
-                        <TextView
-                            android:id="@+id/tv_length"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="@string/password_length"/>
+                    <LinearLayout
+                        android:id="@+id/ll_preferences"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:orientation="vertical"
+                        android:visibility="gone">
 
-                        <EditText
-                            android:id="@+id/edt_length"
-                            android:layout_width="0dp"
+                        <com.google.android.material.checkbox.MaterialCheckBox
+                            android:id="@+id/cb_alphabets"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:inputType="number"
-                            android:hint="@string/password_length"/>
+                            android:checked="true"
+                            android:text="@string/alphabets"/>
+
+                        <com.google.android.material.checkbox.MaterialCheckBox
+                            android:id="@+id/cb_digits"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/digitz"/>
+
+                        <com.google.android.material.checkbox.MaterialCheckBox
+                            android:id="@+id/cb_special"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/special_characters"/>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:weightSum="2"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/tv_length"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="@string/password_length"/>
+
+                            <EditText
+                                android:id="@+id/edt_length"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:inputType="number"
+                                android:hint="@string/password_length"/>
+                        </LinearLayout>
+
+                        <Button
+                            android:id="@+id/btn_set_password"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/set_password"/>
                     </LinearLayout>
 
                     <Button
-                        android:id="@+id/btn_set_password"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/btn_show_prefs"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/set_password"/>
+                        android:layout_marginStart="30dp"
+                        android:layout_marginEnd="30dp"
+                        android:layout_weight="1.5"
+                        android:text="@string/gen_password" />
                 </LinearLayout>
-
-                <Button
-                    android:id="@+id/btn_show_prefs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginEnd="30dp"
-                    android:layout_weight="1.5"
-                    android:text="@string/gen_password" />
             </LinearLayout>
-        </LinearLayout>
 
-        <Button
-            android:id="@+id/btn_submit_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/ll_password"
-            android:layout_margin="10dp"
-            android:text="@string/submit"
-            android:textSize="21sp" />
-    </RelativeLayout>
+            <Button
+                android:id="@+id/btn_submit_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ll_password"
+                android:layout_margin="10dp"
+                android:text="@string/submit"
+                android:textSize="21sp" />
+        </RelativeLayout>
+    </ScrollView>
 </layout>
