Fix password using the same initialization vector therefore, previous password could not be decrypted by the same iv
layout change, refining the edges and addition of delete button to delete passwords.

--- a/app/src/main/res/layout/fragment_add_password.xml
+++ b/app/src/main/res/layout/fragment_add_password.xml
@@ -140,14 +140,33 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <Button
-                android:id="@+id/btn_submit_password"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_below="@+id/ll_password"
-                android:layout_margin="10dp"
-                android:text="@string/submit"
-                android:textSize="21sp" />
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <Button
+                    android:id="@+id/btn_submit_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    android:text="@string/submit"
+                    android:textSize="21sp" />
+
+                <Button
+                    android:id="@+id/btn_delete_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/colorCaution"
+                    android:layout_weight="1"
+                    android:layout_margin="10dp"
+                    tools:visibility="gone"
+                    android:text="@string/delete"
+                    android:textSize="21sp" />
+            </LinearLayout>
         </RelativeLayout>
     </ScrollView>
 </layout>
