--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,11 @@
             android:id="@+id/nav_host_fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintVertical_weight="1"
             app:defaultNavHost="true"
             app:navGraph="@navigation/nav_graph"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/nav_view"/>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -29,6 +31,7 @@
             style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
             android:layout_gravity="bottom"
             app:menu="@menu/nav_menu"
+            app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment"
             app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
