--- a/app/src/main/res/layout/password_item.xml
+++ b/app/src/main/res/layout/password_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="passwordItemViewModel"
-            type="com.benatt.passwords.views.passwords.adapter.PasswordItemViewModel" />
+            type="com.benatt.passwordsmanager.views.passwords.adapter.PasswordItemViewModel" />
     </data>
 
     <androidx.cardview.widget.CardView
