--- a/app/src/main/res/layout/fragment_add_password.xml
+++ b/app/src/main/res/layout/fragment_add_password.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
             name="addPasswordViewModel"
-            type="com.benatt.passwords.views.addpassword.AddPasswordViewModel" />
+            type="com.benatt.passwordsmanager.views.addpassword.AddPasswordViewModel" />
     </data>
 
     <ScrollView
@@ -39,7 +38,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/account_name"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:autofillHints="true" />
             </LinearLayout>
 
             <LinearLayout
@@ -71,7 +71,8 @@
                         android:layout_marginStart="5dp"
                         android:layout_weight="3.5"
                         android:hint="@string/password"
-                        android:inputType="textVisiblePassword" />
+                        android:inputType="textVisiblePassword"
+                        android:autofillHints="true" />
 
                     <LinearLayout
                         android:id="@+id/ll_preferences"
@@ -119,7 +120,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:inputType="number"
-                                android:hint="@string/password_length"/>
+                                android:hint="@string/password_length"
+                                android:autofillHints="true" />
                         </LinearLayout>
 
                         <Button
