--- a/app/src/main/res/layout/fragment_passwords.xml
+++ b/app/src/main/res/layout/fragment_passwords.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="passwordsViewModel"
-            type="com.benatt.passwords.views.passwords.PasswordsViewModel" />
+            type="com.benatt.passwordsmanager.views.passwords.PasswordsViewModel" />
     </data>
 
     <RelativeLayout
