Fixed multiple saving of same password when pressing back button

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -38,6 +38,9 @@
 
         <action
             android:id="@+id/action_add_password_to_passwords"
-            app:destination="@id/fragment_passwords"/>
+            app:destination="@id/fragment_passwords"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true"/>
     </fragment>
 </navigation>
