Added data binding to layout

--- a/app/src/main/res/layout/fragment_add_password.xml
+++ b/app/src/main/res/layout/fragment_add_password.xml
@@ -3,6 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
         <variable
+            name="password"
+            type="com.benatt.passwordsmanager.data.models.passwords.model.Password" />
+        <variable
             name="addPasswordViewModel"
             type="com.benatt.passwordsmanager.views.addpassword.AddPasswordViewModel" />
     </data>
@@ -37,6 +40,7 @@
                     android:id="@+id/edt_account_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:text="@={password.accountName}"
                     android:hint="@string/account_name"
                     android:inputType="text"
                     android:autofillHints="true" />
@@ -70,6 +74,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_weight="3.5"
+                        android:text="@={password.cipher}"
                         android:hint="@string/password"
                         android:inputType="textVisiblePassword"
                         android:autofillHints="true" />
