change the package name

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="mainViewModel"
-            type="com.benatt.passwordsmanager.views.MainViewModel" />
+            type="com.benatt.passwordmanager.views.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
