--- a/app/src/main/res/layout/fragment_add_password.xml
+++ b/app/src/main/res/layout/fragment_add_password.xml
@@ -4,10 +4,10 @@
     <data>
         <variable
             name="password"
-            type="com.benatt.passwordsmanager.data.models.passwords.model.Password" />
+            type="com.benatt.passwordmanager.data.models.passwords.model.Password" />
         <variable
             name="addPasswordViewModel"
-            type="com.benatt.passwordsmanager.views.addpassword.AddPasswordViewModel" />
+            type="com.benatt.passwordmanager.views.addpassword.AddPasswordViewModel" />
     </data>
 
     <ScrollView
