--- a/app/src/main/res/layout/password_item.xml
+++ b/app/src/main/res/layout/password_item.xml
@@ -11,45 +11,62 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp">
+        android:layout_margin="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:orientation="vertical">
+            android:weightSum="5"
+            android:paddingTop="5dp"
+            android:paddingBottom="10dp"
+            android:paddingStart="0dp"
+            android:paddingEnd="10dp"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/password_key"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:text="this.email@gmail.com"
-                android:textSize="21sp"
-                android:textStyle="bold"
-                app:mutableText="@{passwordItemViewModel.accountName}"/>
+            <ImageView
+                android:id="@+id/lock_password"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:layout_gravity="center_vertical"
+                android:contentDescription="@string/encryption_status"
+                android:src="@drawable/ic_locked_password"/>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
-                android:orientation="horizontal">
+                android:layout_weight="4"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/password_key"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    tools:text="this.email@gmail.com"
+                    android:textSize="21sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/textColor"
+                    app:mutableText="@{passwordItemViewModel.accountName}"/>
 
                 <TextView
                     android:id="@+id/password_value"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_marginBottom="10dp"
                     tools:text="Password"
                     android:textSize="18sp"
                     android:textStyle="italic"
+                    android:textColor="@color/textColor"
                     app:mutableText="@{passwordItemViewModel.passwordText}"/>
 
                 <Button
                     android:id="@+id/btn_decrypt"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/decrypt"/>
+                    android:backgroundTint="#2A3552"
+                    android:text="@string/decrypt"
+                    android:textColor="@color/colorAccent"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
