update add password button

--- a/app/src/main/res/layout/password_item.xml
+++ b/app/src/main/res/layout/password_item.xml
@@ -64,7 +64,7 @@
                     android:id="@+id/btn_decrypt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="#2A3552"
+                    android:backgroundTint="@color/buttonColor"
                     android:text="@string/decrypt"
                     android:textColor="@color/colorAccent"/>
             </LinearLayout>
