--- a/app/src/main/res/layout/fragment_add_password.xml
+++ b/app/src/main/res/layout/fragment_add_password.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="password"
@@ -92,18 +93,21 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:checked="true"
+                            app:buttonTint="@color/textColor"
                             android:text="@string/alphabets"/>
 
                         <com.google.android.material.checkbox.MaterialCheckBox
                             android:id="@+id/cb_digits"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            app:buttonTint="@color/textColor"
                             android:text="@string/digitz"/>
 
                         <com.google.android.material.checkbox.MaterialCheckBox
                             android:id="@+id/cb_special"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            app:buttonTint="@color/textColor"
                             android:text="@string/special_characters"/>
 
                         <LinearLayout
@@ -133,6 +137,7 @@
                             android:id="@+id/btn_set_password"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:backgroundTint="@color/colorAccent"
                             android:text="@string/set_password"/>
                     </LinearLayout>
 
@@ -143,6 +148,7 @@
                         android:layout_marginStart="30dp"
                         android:layout_marginEnd="30dp"
                         android:layout_weight="1.5"
+                        android:backgroundTint="@color/buttonColor"
                         android:text="@string/gen_password" />
                 </LinearLayout>
             </LinearLayout>
@@ -160,6 +166,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:layout_margin="10dp"
+                    android:backgroundTint="@color/buttonColor"
                     android:text="@string/submit"
                     android:textSize="21sp" />
 
