--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF9800</color>
     <color name="white">#FFFFFF</color>
     <color name="colorCaution">#9F0000</color>
-    <color name="textColor">#2A3552</color>
+    <color name="textColor">#262729</color>
+    <color name="buttonColor">#2A3552</color>
 </resources>
