add copy button

--- a/app/src/main/res/layout/password_item.xml
+++ b/app/src/main/res/layout/password_item.xml
@@ -53,20 +53,40 @@
                     android:id="@+id/password_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
                     tools:text="Password"
                     android:textSize="18sp"
                     android:textStyle="italic"
                     android:textColor="@color/textColor"
                     app:mutableText="@{passwordItemViewModel.passwordText}"/>
 
-                <Button
-                    android:id="@+id/btn_decrypt"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/buttonColor"
-                    android:text="@string/decrypt"
-                    android:textColor="@color/colorAccent"/>
+                    android:weightSum="2"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/btn_decrypt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/buttonColor"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:text="@string/decrypt"
+                        android:textColor="@color/colorAccent"/>
+
+                    <Button
+                        android:id="@+id/btn_copy"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:layout_weight="1"
+                        android:backgroundTint="@color/buttonColor"
+                        style="?android:attr/buttonBarButtonStyle"
+                        android:text="@string/copy_to_clipboard"
+                        android:textColor="@color/colorAccent"/>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
