Update the theme

--- a/app/src/main/res/layout/password_item.xml
+++ b/app/src/main/res/layout/password_item.xml
@@ -16,77 +16,79 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:weightSum="5"
-            android:paddingTop="5dp"
-            android:paddingBottom="10dp"
-            android:paddingStart="0dp"
-            android:paddingEnd="10dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/lock_password"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_weight="1"
-                android:layout_gravity="center_vertical"
-                android:contentDescription="@string/encryption_status"
-                android:src="@drawable/ic_locked_password"/>
+            android:layout_weight="4"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/password_key"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    tools:text="this.email@gmail.com"
-                    android:textSize="21sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/textColor"
-                    app:mutableText="@{passwordItemViewModel.accountName}"/>
-
-                <TextView
-                    android:id="@+id/password_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="Password"
-                    android:textSize="18sp"
-                    android:textStyle="italic"
-                    android:textColor="@color/textColor"
-                    app:mutableText="@{passwordItemViewModel.passwordText}"/>
+                android:orientation="horizontal"
+                android:layout_margin="10dp"
+                android:weightSum="5">
 
                 <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_weight="4">
+
+                    <TextView
+                        android:id="@+id/password_key"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        tools:text="example.email@gmail.com"
+                        android:textSize="21sp"
+                        android:textStyle="bold"
+                        app:mutableText="@{passwordItemViewModel.accountName}"/>
+
+                    <TextView
+                        android:id="@+id/password_value"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="Password"
+                        android:textSize="18sp"
+                        android:textStyle="italic"
+                        app:mutableText="@{passwordItemViewModel.passwordText}"/>
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/lock_password"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="end|top"
+                    android:contentDescription="@string/encryption_status"
+                    android:src="@drawable/ic_locked_password"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_decrypt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:weightSum="2"
-                    android:orientation="horizontal">
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:elevation="8dp"
+                    android:backgroundTint="@color/buttonColor"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:text="@string/decrypt"/>
 
-                    <Button
-                        android:id="@+id/btn_decrypt"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:layout_weight="1"
-                        android:backgroundTint="@color/buttonColor"
-                        style="?android:attr/buttonBarButtonStyle"
-                        android:text="@string/decrypt"
-                        android:textColor="@color/colorAccent"/>
-
-                    <Button
-                        android:id="@+id/btn_copy"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:layout_weight="1"
-                        android:backgroundTint="@color/buttonColor"
-                        style="?android:attr/buttonBarButtonStyle"
-                        android:text="@string/copy_to_clipboard"
-                        android:textColor="@color/colorAccent"/>
-                </LinearLayout>
+                <Button
+                    android:id="@+id/btn_copy"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:elevation="8dp"
+                    android:backgroundTint="@color/buttonColor"
+                    style="?android:attr/buttonBarButtonStyle"
+                    android:text="@string/copy_to_clipboard"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
