--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="white">#FFFFFF</color>
     <color name="colorCaution">#9F0000</color>
     <color name="textColor">#262729</color>
-    <color name="buttonColor">#2A3552</color>
+    <color name="buttonColor">#161C2B</color>
 </resources>
