--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -3,6 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/generate_qr_code"
+        android:title="@string/generate_qr_code"
+        android:icon="@drawable/ic_action_qr_code"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/scan_qr"
+        android:title="@string/scan_qr"
+        android:icon="@drawable/ic_action_qr_scan"/>
+
+    <item
         android:id="@+id/back_passwords"
         android:title="@string/backup_passwords"
         android:icon="@drawable/ic_action_backup"
