--- a/app/src/main/res/layout/fragment_add_password.xml
+++ b/app/src/main/res/layout/fragment_add_password.xml
@@ -149,6 +149,7 @@
                         android:layout_marginEnd="30dp"
                         android:layout_weight="1.5"
                         android:backgroundTint="@color/buttonColor"
+                        style="?android:attr/buttonBarButtonStyle"
                         android:text="@string/gen_password" />
                 </LinearLayout>
             </LinearLayout>
@@ -167,6 +168,7 @@
                     android:layout_weight="1"
                     android:layout_margin="10dp"
                     android:backgroundTint="@color/buttonColor"
+                    style="?android:attr/buttonBarButtonStyle"
                     android:text="@string/submit"
                     android:textSize="21sp" />
 
@@ -178,6 +180,7 @@
                     android:layout_weight="1"
                     android:layout_margin="10dp"
                     tools:visibility="gone"
+                    style="?android:attr/buttonBarButtonStyle"
                     android:text="@string/delete"
                     android:textSize="21sp" />
             </LinearLayout>
