--- a/app/src/main/res/layout/fragment_passwords.xml
+++ b/app/src/main/res/layout/fragment_passwords.xml
@@ -43,6 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
+                style="?android:attr/buttonBarButtonStyle"
                 android:text="@string/add_password"/>
         </LinearLayout>
     </RelativeLayout>
