--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -10,21 +10,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <EditText
+            android:id="@+id/passphrase"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/google_sign_in"
+            android:layout_marginStart="100dp"
+            android:layout_marginEnd="100dp"
+            android:layout_marginBottom="30dp"
+            android:hint="Passphrase"
+            />
+
         <com.google.android.gms.common.SignInButton
             android:id="@+id/google_sign_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"/>
 
-        <TextView
+        <Button
             android:id="@+id/tv_skip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:text="Skip >>"
-            android:textSize="18sp"/>
-
+            android:layout_below="@+id/google_sign_in"
+            android:text="Skip to Passwords"
+            android:textSize="18sp"
+            android:textColor="@color/colorAccent"
+            android:layout_centerHorizontal="true"/>
     </RelativeLayout>
 </layout>
