--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -21,10 +21,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
+            android:padding="10dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:text="Skip >>"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:background="@drawable/button_bg"/>
 
     </RelativeLayout>
 </layout>
