redesigns the cards to use material design

--- a/app/src/main/res/layout/password_item.xml
+++ b/app/src/main/res/layout/password_item.xml
@@ -8,88 +8,73 @@
             type="com.benatt.passwordsmanager.views.passwords.adapter.PasswordItemViewModel" />
     </data>
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:orientation="vertical">
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            android:layout_margin="10dp"
+            android:weightSum="5">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_margin="10dp"
-                android:weightSum="5">
+                android:orientation="vertical"
+                android:layout_weight="4.5">
 
-                <LinearLayout
-                    android:layout_width="0dp"
+                <TextView
+                    android:id="@+id/password_key"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_weight="4">
+                    android:layout_marginBottom="5dp"
+                    tools:text="example.email@gmail.com"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:mutableText="@{passwordItemViewModel.accountName}"/>
 
-                    <TextView
-                        android:id="@+id/password_key"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="5dp"
-                        tools:text="example.email@gmail.com"
-                        android:textSize="21sp"
-                        android:textStyle="bold"
-                        app:mutableText="@{passwordItemViewModel.accountName}"/>
-
-                    <TextView
-                        android:id="@+id/password_value"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        tools:text="Password"
-                        android:textSize="18sp"
-                        android:textStyle="italic"
-                        app:mutableText="@{passwordItemViewModel.passwordText}"/>
-                </LinearLayout>
-
-                <ImageView
-                    android:id="@+id/lock_password"
-                    android:layout_width="0dp"
-                    android:layout_height="30dp"
-                    android:layout_weight="1"
-                    android:layout_gravity="end|top"
-                    android:contentDescription="@string/encryption_status"
-                    android:src="@drawable/ic_locked_password"/>
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/password_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="Password"
+                    android:textSize="14sp"
+                    android:textStyle="italic"
+                    app:chipCornerRadius="5dp"
+                    app:mutableText="@{passwordItemViewModel.passwordText}"/>
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
-                android:orientation="horizontal">
+                android:layout_weight="0.5"
+                android:orientation="vertical"
+                android:gravity="end">
 
                 <Button
                     android:id="@+id/btn_decrypt"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:layout_weight="1"
                     android:elevation="8dp"
-                    android:backgroundTint="@color/buttonColor"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:text="@string/decrypt"/>
+                    style="@style/Widget.Material3.Button.IconButton.Filled"
+                    android:contentDescription="@string/decrypt"
+                    app:icon="@drawable/ic_action_encrypted_on" />
 
                 <Button
                     android:id="@+id/btn_copy"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:layout_weight="1"
                     android:elevation="8dp"
-                    android:backgroundTint="@color/buttonColor"
-                    style="?android:attr/buttonBarButtonStyle"
-                    android:text="@string/copy_to_clipboard"/>
+                    style="@style/Widget.Material3.Button.IconButton.Filled"
+                    android:contentDescription="@string/copy_to_clipboard"
+                    app:icon="@drawable/ic_action_copy"/>
             </LinearLayout>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 </layout>
